bootstrap/stage2/fixtures/borrowed_move_text.stderr
error[E007]: cannot move non-Copy element `x: Text` out of borrowed collection `xs` at line 3; return a Copy scalar or clone the element
