bootstrap/stage2/fixtures/borrowed_move_text.kofun
fn first(read xs: List[Text]) -> Text {
    for x in xs {
        return x
    }
    return ""
}
